UPDATE: minor update TODO: 看看能不能直接从B站下资源?

--- a/python/BiliHelper.ipynb
+++ b/python/BiliHelper.ipynb
@@ -314,17 +314,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"ts\":1546418225,\"code\":0,\"data\":{\"status\":0,\"token_info\":{\"mid\":1381806,\"access_token\":\"de6c0d7057f6783d0c081f87aab2b711\",\"refresh_token\":\"5783be144b9a08ea14e82087bc544d11\",\"expires_in\":2592000},\"cookie_info\":{\"cookies\":[{\"name\":\"bili_jct\",\"value\":\"eca499cadf661f9c8e72566326b21ad4\",\"http_only\":0,\"expires\":1549010225},{\"name\":\"DedeUserID\",\"value\":\"1381806\",\"http_only\":0,\"expires\":1549010225},{\"name\":\"DedeUserID__ckMd5\",\"value\":\"357668196c082654\",\"http_only\":0,\"expires\":1549010225},{\"name\":\"sid\",\"value\":\"m3mqmg7t\",\"http_only\":0,\"expires\":1549010225},{\"name\":\"SESSDATA\",\"value\":\"36d625a6%2C1549010225%2C4f9a5611\",\"http_only\":1,\"expires\":1549010225}],\"domains\":[\".bilibili.com\",\".biligame.com\",\".im9.com\",\".bigfunapp.cn\"]},\"sso\":[\"https://passport.bilibili.com/api/v2/sso\",\"https://passport.biligame.com/api/v2/sso\",\"https://passport.im9.com/api/v2/sso\",\"https://passport.bigfunapp.cn/api/v2/sso\"]}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import hashlib\n",
@@ -335,6 +327,8 @@
     "AppKey='1d8b6e7d45233436'\n",
     "SecretKey='560c52ccd288fed045859ed18bffd973'\n",
     "defaultParam={'build':5350000,'mobi_app':'android','platform':'android'}\n",
+    "downParam={'buvid':headers['Buvid'],'fnval':0,'fnver':0,'module':'bangumi','npcybs':1,'otype':'json','qn':32}\n",
+    "headers={'Display-ID': 'FB3E62A0-4621-440A-B1A5-E6EE67E74AD427879infoc-1545829757','Buvid': 'FB3E62A0-4621-440A-B1A5-E6EE67E74AD427879infoc','User-Agent': 'Mozilla/5.0 BiliDroid/5.35.0 (bbcallen@gmail.com)','Device-ID': 'RSYQJEYnEiBDekh6BjQGNAZkVDUGYwBlUS1RZ1FpC2oMPAk'}\n",
     "cookies={}\n",
     "def getSign(params):\n",
     "    params.update(appkey=AppKey)\n",
@@ -351,72 +345,103 @@
     "    cipher = Cipher_pkcs1_v1_5.new(rsa_key)\n",
     "    cipher_text = base64.b64encode(cipher.encrypt((req_getKey.json()['data']['hash']+pw).encode()))  # 通过生成的对象加密message明文，注意，在python3中加密的数据必须是bytes类型的数据，不能是str类型的数据\n",
     "    return(cipher_text.decode())\n",
-    "\n",
-    "res=requests.post(url_login+'v3/oauth2/login',\n",
-    "                  data=getSign({'appkey':AppKey,'username':'18910958663',**defaultParam,'password':encrypt_pw('oudanyi6456',cookies),'ts':int(time.time())}),\n",
-    "                  headers={'Display-ID': 'FB3E62A0-4621-440A-B1A5-E6EE67E74AD427879infoc-1545829757','Buvid': 'FB3E62A0-4621-440A-B1A5-E6EE67E74AD427879infoc','User-Agent': 'Mozilla/5.0 BiliDroid/5.35.0 (bbcallen@gmail.com)','Device-ID': 'RSYQJEYnEiBDekh6BjQGNAZkVDUGYwBlUS1RZ1FpC2oMPAk'},\n",
-    "                  cookies=cookies)\n",
-    "print(res.text)"
+    "def login(username,password):\n",
+    "    return requests.post(url_login+'v3/oauth2/login',\n",
+    "                  data=getSign({'appkey':AppKey,'username':username,**defaultParam,'password':encrypt_pw(password,cookies),'ts':int(time.time())}),\n",
+    "                  headers=headers,cookies=cookies)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mid': 17333796, 'access_key': 'c8e95b0d6d3d8bdbbbeb9b0add8dad11'}\n",
+      "{'accept_format': 'hdflv2,flv,flv720,flv480,mp4', 'code': 0, 'durl': [{'size': 100477741, 'ahead': 'EZA=', 'length': 1473171, 'vhead': 'AWQAH//hABhnZAAfrNnA2D3n4QAAAwPpAAC7gA8YMZ4BAAVo6bssiw==', 'backup_url': ['http://upos-hz-mirrorcos.acgvideo.com/upgcxcode/49/10/69511049/69511049-1-32.flv?um_deadline=1546793373&platform=android&rate=1200000&oi=1931202596&um_sign=5fe265677612c13691e0fddd07007d2a&gen=playurl&os=cos&trid=df2d6fa14e8e40a6bfb2ff6ed8139b8a'], 'url': 'http://upos-hz-mirrorks3u.acgvideo.com/upgcxcode/49/10/69511049/69511049-1-32.flv?e=ig8euxZM2rNcNbRghwdVhwdlhWNVhwdVhoNvNC8BqJIzNbfqXBvEuENvNC8aNEVEtEvE9IMvXBvE2ENvNCImNEVEIj0Y2J_aug859r1qXg8xNEVE5XREto8GuFGv2U7SuxI72X6fTr859IB_&deadline=1546793373&gen=playurl&nbs=1&oi=1931202596&os=ks3u&platform=android&trid=df2d6fa14e8e40a6bfb2ff6ed8139b8a&uipk=5&upsig=9ac0fecf9fbd56e556ca2a7867169083', 'order': 1}], 'seek_param': 'start', 'format': 'flv480', 'fnval': 0, 'video_project': True, 'fnver': 0, 'accept_quality': [112, 80, 64, 32, 16], 'bp': 0, 'quality': 32, 'timelength': 1473171, 'result': 'suee', 'seek_type': 'offset', 'has_paid': True, 'vip_type': 2, 'vip_status': 1, 'from': 'local', 'video_codecid': 7, 'accept_description': ['高清 1080P+', '高清 1080P', '高清 720P', '清晰 480P', '流畅 360P'], 'status': 13}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# res=login('13336195435','47890025')\n",
+    "url_down='https://api.bilibili.com/pgc/player/api/playurl'\n",
+    "params_video1={'aid':35822946,'cid':68495959}\n",
+    "params_video2={\"aid\":31861445,\"cid\":55724249}#港台\n",
+    "params_video3={'aid':39564264,'cid':69511049}#会员\n",
+    "params_user={'mid':res.json()['data']['token_info']['mid'],'access_key':res.json()['data']['token_info']['access_token']}\n",
+    "print(params_user)\n",
+    "params={'appKey':AppKey,**defaultParam,'buvid':headers['Buvid'],\n",
+    "       'fnval':0,'fnver':0,'module':'bangumi','npcybs':1,'otype':'json','qn':32,\n",
+    "       **params_video3,**params_user}\n",
+    "res_down=requests.get(url_down,params=getSign({**downParam,**defaultParam,**params_user,**params_video3})).json()\n",
+    "if res_down.__contains__('message') and ['message']=='大会员专享限制':\n",
+    "    res=login('13336195435','47890025')\n",
+    "    res_down=requests.get(url_down,params=getSign({**downParam,**defaultParam,**params_user,**params_video3})).json()\n",
+    "print(res_down)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'accept_format': 'hdflv2,flv,flv720,flv480,mp4',\n",
-       " 'code': 0,\n",
-       " 'durl': [{'size': 100477741,\n",
-       "   'ahead': 'EZA=',\n",
-       "   'length': 1473171,\n",
-       "   'vhead': 'AWQAH//hABhnZAAfrNnA2D3n4QAAAwPpAAC7gA8YMZ4BAAVo6bssiw==',\n",
-       "   'backup_url': ['http://upos-hz-mirrorks3u.acgvideo.com/upgcxcode/49/10/69511049/69511049-1-32.flv?e=ig8euxZM2rNcNbRghwdVhwdlhWNVhwdVhoNvNC8BqJIzNbfqXBvEuENvNC8aNEVEtEvE9IMvXBvE2ENvNCImNEVEIj0Y2J_aug859r1qXg8xNEVE5XREto8GuFGv2U7SuxI72X6fTr859IB_&deadline=1546425971&gen=playurl&nbs=1&oi=2093829167&os=ks3u&platform=android&trid=0cf7fec32b324d2786d4abb189d059b5&uipk=5&upsig=63517ec7795aa8fc5818d3ef1ac85a97',\n",
-       "    'http://upos-hz-mirrorcos.acgvideo.com/upgcxcode/49/10/69511049/69511049-1-32.flv?um_deadline=1546425971&platform=android&rate=1200000&oi=2093829167&um_sign=9e87f2ebef917cdf22557a288424a8ee&gen=playurl&os=cos&trid=0cf7fec32b324d2786d4abb189d059b5'],\n",
-       "   'url': 'http://124.202.167.12/upgcxcode/49/10/69511049/69511049-1-32.flv?e=ig8euxZM2rNcNbRghwdVhwdlhWNVhwdVhoNvNC8BqJIzNbfqXBvEuENvNC8aNEVEtEvE9IMvXBvE2ENvNCImNEVEIj0Y2J_aug859r1qXg8xNEVE5XREto8GuFGv2U7SuxI72X6fTr859IB_&deadline=1546425971&gen=playurl&nbs=1&oi=2093829167&os=acache&platform=android&trid=0cf7fec32b324d2786d4abb189d059b5&uipk=5&upsig=543a9a839e6564aa229633da47d4caa6',\n",
-       "   'order': 1}],\n",
-       " 'seek_param': 'start',\n",
-       " 'format': 'flv480',\n",
-       " 'fnval': 0,\n",
-       " 'video_project': True,\n",
-       " 'fnver': 0,\n",
-       " 'accept_quality': [112, 80, 64, 32, 16],\n",
-       " 'bp': 0,\n",
-       " 'quality': 32,\n",
-       " 'timelength': 1473171,\n",
-       " 'result': 'suee',\n",
-       " 'seek_type': 'offset',\n",
-       " 'has_paid': True,\n",
-       " 'vip_type': 2,\n",
-       " 'vip_status': 1,\n",
-       " 'from': 'local',\n",
-       " 'video_codecid': 7,\n",
-       " 'accept_description': ['高清 1080P+',\n",
-       "  '高清 1080P',\n",
-       "  '高清 720P',\n",
-       "  '清晰 480P',\n",
-       "  '流畅 360P'],\n",
-       " 'status': 13}"
+       "95.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url_down='https://api.bilibili.com/pgc/player/api/playurl'\n",
-    "params_video={'aid':35822946,'cid':68495959}\n",
-    "params_video={\"aid\":31861445,\"cid\":55724249}#港台\n",
-    "params_video={'aid':39564264,'cid':69511049}#会员\n",
-    "params_user={'mid':1381806,'access_key':'565517dc877bcceae69718005cdebec1'}#我的\n",
-    "params_user={'mid':17333796,'access_key':'9b278f3465ef1ade1a23bcdbe8560d11'}#会员\n",
-    "params={'appKey':AppKey,**defaultParam,'buvid':'FB3E62A0-4621-440A-B1A5-E6EE67E74AD427879infoc',\n",
-    "       'expire':1548421792,'fnval':0,'fnver':0,'module':'bangumi','npcybs':1,'otype':'json','qn':32,'ts':1546410215,\n",
-    "       **params_video,**params_user}\n",
-    "requests.get(url_down,params=getSign(params)).json()"
+    "r = requests.get(res_down['durl'][0]['url'],stream=True,headers={'User-Agent':'Bilibili Freedoooooom/MarkII'})\n",
+    "int(r.headers['Content-Length'])/1024//1024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<html>\\r\\n<head><title>403 Forbidden</title></head>\\r\\n<body bgcolor=\"white\">\\r\\n<center><h1>403 Forbidden</h1></center>\\r\\n<hr><center>nginx/1.10.2</center>\\r\\n</body>\\r\\n</html>\\r\\n'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://upos-hz-mirrorks3u.acgvideo.com/upgcxcode/49/10/69511049/69511049-1-32.flv?e=ig8euxZM2rNcNbRghwdVhwdlhWNVhwdVhoNvNC8BqJIzNbfqXBvEuENvNC8aNEVEtEvE9IMvXBvE2ENvNCImNEVEIj0Y2J_aug859r1qXg8xNEVE5XREto8GuFGv2U7SuxI72X6fTr859IB_&deadline=1546793373&gen=playurl&nbs=1&oi=1931202596&os=ks3u&platform=android&trid=df2d6fa14e8e40a6bfb2ff6ed8139b8a&uipk=5&upsig=9ac0fecf9fbd56e556ca2a7867169083'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_down['durl'][0]['url']"
    ]
   },
   {
